# ekf-rs

./: .gitignore  Cargo.toml  README.md
benches/: backend_benchmark.rs
docs/: benchmark-results.md  cholesky.md  ekf-implementation-notes.md  euroc-validation-plan.md  matmul-optimization-notes.md
examples/: backend_timing.rs  constant_velocity_2d.rs  euroc_vr1_gt_test.rs
scripts/: generate_benchmark_table.sh
src/: lib.rs  main.rs  state.rs
src/filter/: ekf.rs  generalized_ekf.rs  mod.rs
src/math/: backend.rs  errors.rs  matrix.rs  mod.rs  scalar_trait.rs
src/math/matmul/: matmul.rs  mod.rs
src/model/: measurement.rs  motion.rs
