[package]
name = "ekf"
version = "0.1.0"
edition = "2024"

[features]
nalgebra-backend = ["dep:nalgebra"]

[dependencies]
csv = "1.4.0"
nalgebra = { version = "0.33", optional = true }
num-traits = "0.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "backend_benchmark"
harness = false
